--- a/react-ts-study/package.json
+++ b/react-ts-study/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.12.4",
+    "echarts": "^5.4.3",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
