--- a/react-ts-study/package.json
+++ b/react-ts-study/package.json
@@ -15,7 +15,9 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.0",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
