--- a/react-ts-study/package.json
+++ b/react-ts-study/package.json
@@ -4,15 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "vite --config ./config/vite.config.dev.ts",
+    "build:testing": "vite build --config ./config/vite.config.testing.ts",
+    "build:prod": "vite build --config ./config/vite.config.prod.ts",
+    "build:check": "vue-tsc --noEmit --skipLibCheck && vite build --config ./config/vite.config.prod.ts"
   },
   "dependencies": {
     "antd": "^5.12.4",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "history": "^5.3.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
